# flatcc

./: CMakeLists.txt  README.md
samples/cFS_EVS/: cfs_evs.fbs
src/runtime/: CMakeLists.txt  builder.c
